--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>College Black Diaries</title>
   <style>
-    body { font-family: sans-serif; background: #111; color: #eee; padding: 2rem; }
-    h1 { color: #ff4081; }
-    .box { background: #222; padding: 1rem; border-radius: 10px; margin-top: 2rem; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #121212;
+      color: #f2f2f2;
+      padding: 2rem;
+      margin: 0;
+    }
+
+    h1 {
+      color: #ff4081;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
+
+    .box {
+      background-color: #1e1e1e;
+      padding: 1.5rem;
+      border-radius: 12px;
+      margin-top: 2rem;
+      box-shadow: 0 0 12px rgba(255, 64, 129, 0.3);
+    }
+
+    .footer {
+      margin-top: 3rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
@@ -14,7 +45,11 @@
   <p>Speak up. Share anonymously. Be heard.</p>
 
   <div class="box">
-    <p><strong>Coming Soon:</strong> Anonymous submission box for female students in higher education.</p>
+    <p><strong>Coming Soon:</strong> A secure anonymous submission form for female students in higher education to share their experiences with harassment at colleges and universities in India.</p>
+  </div>
+
+  <div class="footer">
+    &copy; 2025 College Black Diaries. Built with courage ✊
   </div>
 </body>
 </html>
