Update_homepage_design.html

--- a/index.html
+++ b/index.html
@@ -1,55 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>College Black Diaries</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #121212;
-      color: #f2f2f2;
-      padding: 2rem;
       margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f9f9f9;
+      color: #333;
     }
-
-    h1 {
-      color: #ff4081;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+    header {
+      background: #000;
+      color: #fff;
+      padding: 40px 20px;
+      text-align: center;
     }
-
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    header p {
+      font-size: 1.2em;
+      margin-top: 10px;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h2 {
+      color: #222;
+      margin-bottom: 10px;
+    }
     p {
-      font-size: 1.2rem;
+      font-size: 1.1em;
       line-height: 1.6;
     }
-
-    .box {
-      background-color: #1e1e1e;
-      padding: 1.5rem;
-      border-radius: 12px;
-      margin-top: 2rem;
-      box-shadow: 0 0 12px rgba(255, 64, 129, 0.3);
+    .cta-button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 25px;
+      background: #000;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background 0.3s ease;
     }
-
-    .footer {
-      margin-top: 3rem;
+    .cta-button:hover {
+      background: #444;
+    }
+    footer {
+      background: #eee;
       text-align: center;
-      font-size: 0.9rem;
-      color: #aaa;
+      padding: 20px;
+      font-size: 0.9em;
+      margin-top: 40px;
+    }
+    footer a {
+      color: #000;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <h1>College Black Diaries</h1>
-  <p>Speak up. Share anonymously. Be heard.</p>
 
-  <div class="box">
-    <p><strong>Coming Soon:</strong> A secure anonymous submission form for female students in higher education to share their experiences with harassment at colleges and universities in India.</p>
-  </div>
+  <header>
+    <h1>College Black Diaries</h1>
+    <p>Because every story deserves to be heard.</p>
+  </header>
 
-  <div class="footer">
-    &copy; 2025 College Black Diaries. Built with courage ✊
-  </div>
+  <section>
+    <h2>What is this about?</h2>
+    <p>This is an anonymous platform where students from all walks of life can share their college stories—unfiltered, real, and raw. Whether it's about joy, struggle, growth, or simply surviving, this is your safe space to be heard.</p>
+  </section>
+
+  <section>
+    <h2>Share Your Story</h2>
+    <p>Got something on your mind? An unforgettable experience? Submit it anonymously. (Submission feature coming soon!)</p>
+  </section>
+
+  <footer>
+    <p>Made with ❤️ by students, for students. | <a href="mailto:collegeblackdiaries1997@proton.me">Contact Us</a></p>
+  </footer>
+
 </body>
 </html>
