index_updated.html

--- a/index.html
+++ b/index.html
@@ -11,46 +11,70 @@
       background: #f9f9f9;
       color: #333;
     }
+
     header {
       background: #000;
       color: #fff;
       padding: 40px 20px;
       text-align: center;
     }
+
     header h1 {
       margin: 0;
       font-size: 2.5em;
     }
+
     header p {
       font-size: 1.2em;
       margin-top: 10px;
     }
+
     section {
       padding: 40px 20px;
       max-width: 800px;
       margin: auto;
     }
+
     h2 {
       color: #222;
       margin-bottom: 10px;
     }
+
     p {
       font-size: 1.1em;
       line-height: 1.6;
     }
-    .cta-button {
-      display: inline-block;
+
+    form {
       margin-top: 20px;
-      padding: 12px 25px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    textarea {
+      padding: 1rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      resize: vertical;
+      font-size: 1rem;
+      height: 200px;
+    }
+
+    button {
+      margin-top: 1rem;
+      padding: 0.75rem;
       background: #000;
       color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background 0.3s ease;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
     }
-    .cta-button:hover {
+
+    button:hover {
       background: #444;
     }
+
     footer {
       background: #eee;
       text-align: center;
@@ -58,6 +82,7 @@
       font-size: 0.9em;
       margin-top: 40px;
     }
+
     footer a {
       color: #000;
       text-decoration: none;
@@ -78,7 +103,12 @@
 
   <section>
     <h2>Share Your Story</h2>
-    <p>Got something on your mind? An unforgettable experience? Submit it anonymously. (Submission feature coming soon!)</p>
+    <p>Got something on your mind? An unforgettable experience? Submit it anonymously.</p>
+
+    <form action="https://formspree.io/f/xgvapzod" method="POST">
+      <textarea name="message" placeholder="Write your story here..." required></textarea>
+      <button type="submit">Submit Anonymously</button>
+    </form>
   </section>
 
   <footer>
