--- a/index.html
+++ b/index.html
@@ -11,70 +11,57 @@
       background: #f9f9f9;
       color: #333;
     }
-
     header {
       background: #000;
       color: #fff;
       padding: 40px 20px;
       text-align: center;
     }
-
     header h1 {
       margin: 0;
       font-size: 2.5em;
     }
-
     header p {
       font-size: 1.2em;
       margin-top: 10px;
     }
-
     section {
       padding: 40px 20px;
       max-width: 800px;
       margin: auto;
     }
-
     h2 {
       color: #222;
       margin-bottom: 10px;
     }
-
     p {
       font-size: 1.1em;
       line-height: 1.6;
     }
-
-    form {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-    }
-
-    textarea {
-      padding: 1rem;
-      border-radius: 8px;
+    form textarea {
+      width: 100%;
+      height: 150px;
+      padding: 10px;
+      font-size: 1em;
+      margin-top: 10px;
       border: 1px solid #ccc;
+      border-radius: 5px;
       resize: vertical;
-      font-size: 1rem;
-      height: 200px;
     }
-
-    button {
-      margin-top: 1rem;
-      padding: 0.75rem;
-      background: #000;
-      color: #fff;
+    form button {
+      display: block;
+      margin-top: 15px;
+      padding: 12px 20px;
+      background-color: #000;
+      color: white;
       border: none;
-      border-radius: 8px;
-      font-weight: bold;
+      border-radius: 5px;
       cursor: pointer;
+      font-weight: bold;
     }
-
-    button:hover {
-      background: #444;
+    form button:hover {
+      background-color: #444;
     }
-
     footer {
       background: #eee;
       text-align: center;
@@ -82,7 +69,6 @@
       font-size: 0.9em;
       margin-top: 40px;
     }
-
     footer a {
       color: #000;
       text-decoration: none;
@@ -98,7 +84,9 @@
 
   <section>
     <h2>What is this about?</h2>
-    <p>This is an anonymous platform where students from all walks of life can share their college stories—unfiltered, real, and raw. Whether it's about joy, struggle, growth, or simply surviving, this is your safe space to be heard.</p>
+    <p>
+      This platform is more than a diary—it's a movement. <strong>College Black Diaries</strong> is here to build a strong, supportive community for women students across India. By sharing your experiences—raw, painful, or eye-opening—you are not just unburdening your heart, you are sparking awareness and paving the way for change. Even a single story can inspire many, warn others, or help someone realize they are not alone. Despite decades since the Vishakha Guidelines, proper implementation in educational institutions remains rare. Harassment is normalized, complaints are silenced, and justice often feels out of reach. But silence helps no one. This is a call to all female students—share your voice, your truth. <strong>Drop by drop, we fill the ocean.</strong> Your small act of courage today could lead to a revolution tomorrow.
+    </p>
   </section>
 
   <section>
