--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
 <body>
 
   <header>
-    <h1>College Black Diaries</h1>
-    <p>Because every story deserves to be heard.</p>
+    <h1>COLLEGE BLACK DIARIES</h1>
+    <p>BECAUSE EVERY STORY NEEDS TO BE HEARD.</p>
   </header>
 
   <section>
     <h2>What is this about?</h2>
     <p>
-      This platform is more than a diary—it's a movement. <strong>College Black Diaries</strong> is here to build a strong, supportive community for women students across India. By sharing your experiences—raw, painful, or eye-opening—you are not just unburdening your heart, you are sparking awareness and paving the way for change. Even a single story can inspire many, warn others, or help someone realize they are not alone. Despite decades since the Vishakha Guidelines, proper implementation in educational institutions remains rare. Harassment is normalized, complaints are silenced, and justice often feels out of reach. But silence helps no one. This is a call to all female students—share your voice, your truth. <strong>Drop by drop, we fill the ocean.</strong> Your small act of courage today could lead to a revolution tomorrow.
+      This platform is more than a diary—it's a movement. <strong>College Black Diaries</strong> is here to build a strong, supportive community for women students across India. By sharing your experiences—raw, painful, or eye-opening—you are not just unburdening your heart, you are sparking awareness and paving the way for change. Even a single story can empower many, warn others, or help someone realize they are not alone. Despite decades since the Vishakha Guidelines, proper implementation in educational institutions remains rare. Harassment is normalized, complaints are silenced, and justice often feels out of reach. But silence helps no one. This is a call to all female students—share your voice, your truth. <strong>Drop by drop, we fill the ocean.</strong> Your small act of courage today could lead to a revolution tomorrow.
     </p>
   </section>
 
   <section>
     <h2>Share Your Story</h2>
-    <p>Got something on your mind? An unforgettable experience? Submit it anonymously.</p>
+    <p>Got something on your mind? something you couldn't share before? Submit it anonymously.</p>
 
     <form action="https://formspree.io/f/xgvapzod" method="POST">
       <textarea name="message" placeholder="Write your story here..." required></textarea>
@@ -99,9 +99,9 @@
     </form>
   </section>
 
-  <footer>
-    <p>Made with ❤️ by students, for students. | <a href="mailto:collegeblackdiaries1997@proton.me">Contact Us</a></p>
-  </footer>
+<footer>
+  <p>Made with ❤️ by students, for students. | Contact us: collegeblackdiaries1997@proton.me (<a href="mailto:collegeblackdiaries1997@proton.me">Email</a>)</p>
+</footer>
 
 </body>
 </html>
