--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
   </header>
 
   <nav>
-    <a href="#published-stories">Published Stories</a>
-    <a href="#how-to-report">How to Report</a>
     <a href="#share-your-story">Share Your Story</a>
+    <a href="#published testimonies">Published Testimonies</a>
+    <a href="#how-to-report">How to Report</a>
   </nav>
 
   <section>
@@ -120,8 +120,22 @@
     </p>
   </section>
 
+  <section id="share-your-story">
+    <h2>Share Your Story</h2>
+    <p>Got something on your mind? Something you couldn't share before? Submit it anonymously.</p>
+    <p style="font-size: 1em; color: #666; margin-top: -10px;">
+      <strong>Your submission is 100% anonymous.</strong> You do not need to provide your name, ID, or any personal information. We understand how difficult it is to speak up, especially when there’s something at stake. If you wish, you may mention the name of the perpetrator—doing so can help others stay informed and protected. Your voice matters. You are not alone.
+<!--       <strong>Note:</strong> Your submission is <strong>completely anonymous</strong>—you don’t need to mention your name, college, or any personal identifiers. If you're comfortable, you may name the perpetrator to help others stay informed and safe. -->
+    </p>
+
+    <form action="https://formspree.io/f/xgvapzod" method="POST">
+      <textarea name="message" placeholder="Write your story here... (No need to share your identity, it's completely anonymous. If you wish, you can name the perpetrator to help others stay informed.)" required></textarea>
+      <button type="submit">Submit Anonymously</button>
+    </form>
+  </section>
+
   <section id="published-stories">
-    <h2>Published Stories</h2>
+    <h2>Published Testimonies</h2>
     <p>
       Here are stories shared by brave individuals. Every story sheds light on the lived realities of students across the country. If you’ve shared your experience with us and allowed us to post it, it may appear here (with all identifying details removed).
     </p>
@@ -147,18 +161,6 @@
     <p>You are not alone. Your voice matters. 🤍</p>
   </section>
 
-  <section id="share-your-story">
-    <h2>Share Your Story</h2>
-    <p>Got something on your mind? Something you couldn't share before? Submit it anonymously.</p>
-    <p style="font-size: 1em; color: #666; margin-top: -10px;">
-      <strong>Note:</strong> Your submission is <strong>completely anonymous</strong>—you don’t need to mention your name, college, or any personal identifiers. If you're comfortable, you may name the perpetrator to help others stay informed and safe.
-    </p>
-
-    <form action="https://formspree.io/f/xgvapzod" method="POST">
-      <textarea name="message" placeholder="Write your story here... (No need to share your identity, it's completely anonymous. If you wish, you can name the perpetrator to help others stay informed.)" required></textarea>
-      <button type="submit">Submit Anonymously</button>
-    </form>
-  </section>
 
   <footer>
     <p>Made with ❤️ by students, for students. | Contact us: collegeblackdiaries1997@proton.me (<a href="mailto:collegeblackdiaries1997@proton.me">Email</a>)</p>
