--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <nav>
     <a href="#share-your-story">Share Your Story</a>
-    <a href="#published testimonies">Published Testimonies</a>
+    <a href="#published-testimonies">Published Testimonies</a>
     <a href="#how-to-report">How to Report</a>
   </nav>
 
@@ -125,7 +125,6 @@
     <p>Got something on your mind? Something you couldn't share before? Submit it anonymously.</p>
     <p style="font-size: 1em; color: #666; margin-top: -10px;">
       <strong>Your submission is 100% anonymous.</strong> You do not need to provide your name, ID, or any personal information. We understand how difficult it is to speak up, especially when there’s something at stake. If you wish, you may mention the name of the perpetrator—doing so can help others stay informed and protected. Your voice matters. You are not alone.
-<!--       <strong>Note:</strong> Your submission is <strong>completely anonymous</strong>—you don’t need to mention your name, college, or any personal identifiers. If you're comfortable, you may name the perpetrator to help others stay informed and safe. -->
     </p>
 
     <form action="https://formspree.io/f/xgvapzod" method="POST">
@@ -134,14 +133,14 @@
     </form>
   </section>
 
-  <section id="published-stories">
+  <section id="published-testimonies">
     <h2>Published Testimonies</h2>
     <p>
-      Here are stories shared by brave individuals. Every story sheds light on the lived realities of students across the country. If you’ve shared your experience with us and allowed us to post it, it may appear here (with all identifying details removed).
+      Here are stories shared by brave individuals. Every story sheds light on the lived realities of students across the country. If you’ve shared your experience with us and allowed us to post it, it may appear here.
     </p>
     <!-- Add real stories here -->
-    <p><em>Story #1: “It started with uncomfortable stares in class...”</em></p>
-    <p><em>Story #2: “When I reported, I was told to keep quiet and focus on my studies...”</em></p>
+<!--     <p><em>Story #1: “It started with uncomfortable stares in class...”</em></p> -->
+<!--     <p><em>Story #2: “When I reported, I was told to keep quiet and focus on my studies...”</em></p> -->
     <p><em>More stories coming soon.</em></p>
   </section>
 
@@ -152,15 +151,14 @@
     </p>
     <ul>
       <li><strong>1. Document Everything:</strong> Record dates, times, details, screenshots—anything that may support your case.</li>
-      <li><strong>2. Know Your Rights:</strong> Understand the <a href="https://www.shebox.nic.in/" target="_blank">Vishakha Guidelines</a> and the <a href="https://wcd.nic.in/sites/default/files/Sexual-Harassment-at-Workplace-Act.pdf" target="_blank">POSH Act</a>.</li>
+      <li><strong>2. Know Your Rights:</strong> Understand the <a href="https://poshatwork.com/" target="_blank">POSH Guidelines</a>, <a href="https://cag.gov.in/uploads/cms_pages_files/Vishkha-Guidelines-against-Sexual-Harassment-in-Workplace-061de8308de91c7-65164897.pdf" target="_blank">Vishakha Guidelines</a> and the <a href="https://shlc.in/she-box-portal-guide-safe-spaces/" target="_blank">SHe-Box Portal</a>.</li>
       <li><strong>3. Reach the Right Authority:</strong> Report to your college’s ICC (Internal Complaints Committee) or Women’s Cell.</li>
       <li><strong>4. Seek Support:</strong> Don’t go through it alone—talk to supportive peers, teachers, or NGOs.</li>
-      <li><strong>5. Use Online Portals:</strong> File complaints at <a href="https://www.shebox.nic.in/" target="_blank">SHe-Box</a> or <a href="https://cybercrime.gov.in/" target="_blank">Cybercrime Portal</a>.</li>
+      <li><strong>5. Use Online Portals:</strong> File complaints at <a href="https://www.shebox.nic.in/" target="_blank">SHe-Box</a>.</li>
       <li><strong>6. Follow Up:</strong> Keep a copy of your complaint and escalate if necessary to UGC or the Women’s Commission.</li>
     </ul>
     <p>You are not alone. Your voice matters. 🤍</p>
   </section>
-
 
   <footer>
     <p>Made with ❤️ by students, for students. | Contact us: collegeblackdiaries1997@proton.me (<a href="mailto:collegeblackdiaries1997@proton.me">Email</a>)</p>
